kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: APP_DB_NAME
              value: thingsboard
            - name: APP_DB_PASS
              value: spotlight
            - name: APP_DB_USER
              value: thingsboard
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: spotlight
            - name: POSTGRES_USER
              value: postgres
          image: ghcr.io/notbobutah/spotlight-iot-db:latest
          imagePullPolicy: Always
          # livenessProbe:
          #   exec:
          #     command:
          #       - pg_isready
          #       - -q
          #       - -d
          #       - postgres
          #       - -U
          #       - postgres
          #   failureThreshold: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 45
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          # volumeMounts:
          #    - mountPath: /var/lib/postgresql/data/
          #      name: pg-data
      restartPolicy: Always
      # volumes:
      #   - name: pg-data
      #     persistentVolumeClaim:
      #       claimName: spotlight/pg-data-pvc
status: {}
