kubernetes/pi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pi
  name: pi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: pi
    spec:
      containers:
        - image: ryankurte/docker-rpi-emu
          name: pi
          resources: {}
      restartPolicy: Always
status: {}
