kubernetes/spotlight-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spotlight-be
  name: spotlight-be
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spotlight-be
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: spotlight-be
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: jdbc:postgresql://${DB_SERVICE_HOST}:${DB_SERVICE_PORT}/postgres
            - name: NODE_ENV
              value: test
            - name: PORT
              value: "8080"
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: spotlight
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_SERVER
              value: db
            - name: POSTGRES_USER
              value: postgres
          image: ghcr.io/notbobutah/spotlight-iot-be:latest
          imagePullPolicy: Always
          name: spotlight-be
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
