kubernetes/spotlight-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spotlight-fe
  name: spotlight-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spotlight-fe
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: spotlight-fe
    spec:
      containers:
        - args:
            - bash
            - -c
            - npm start
          image: ghcr.io/notbobutah/spotlight-iot-fe:main
          imagePullPolicy: IfNotPresent
          name: spotlight-fe
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
