kubernetes/tb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: tb
  name: tb
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "1883"
      port: 1883
      targetPort: 1883
    - name: "7070"
      port: 7070
      targetPort: 7070
    - name: "5683"
      port: 5683
      protocol: UDP
      targetPort: 5683
  selector:
    io.kompose.service: tb
status:
  loadBalancer: {}
