kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spotlight-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: spotlight-be-service
            servicePort: 8080
        - path: /
          backend:
            serviceName: spotlight-fe-service
            servicePort: 80
